--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
 
     //kokis library for shared preferences
     implementation 'com.prihanofficial:kokis:1.0.0'
+
+//firebase message
+    implementation 'com.google.firebase:firebase-messaging:21.0.0'
 }
